fixed devoops full-height assign scrollbar bug

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -1,8 +1,11 @@
+html, body {
+    height: initial;
+}
+
 body {
     background: #fafafa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
-    height: initial;
 }
 
 #content {
